force-app/main/default/objects/GLBP1_Plan_de_pago__c/GLBP1_Plan_de_pago__c.object-meta.xml
<CustomObject>
    <label>Plan de pago</label>
    <nameField>
        <label>Nombre de Plan de pago</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planes de pago</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>