force-app/main/default/objects/GLBP1_Plan_de_pago__c/fields/GLBP1_Ciudad__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Ciudad__c</fullName>
    <label>Ciudad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>