force-app/main/default/objects/GLBP1_Plan_de_pago__c/fields/GLBP1_Cliente__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Planes de pago</relationshipLabel>
    <relationshipName>Planes_de_pago</relationshipName>
    <type>Lookup</type>
</CustomField>