force-app/main/default/objects/GLBP1_Plan_de_pago__c/fields/GLBP1_Comuna__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Comuna__c</fullName>
    <label>Comuna</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GLBP1_Comuna</valueSetName>
    </valueSet>
</CustomField>