force-app/main/default/objects/GLBP1_Plan_de_pago__c/fields/GLBP1_Direcci_n_de_cobranza__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Direcci_n_de_cobranza__c</fullName>
    <label>Dirección de cobranza</label>
    <length>255</length>
    <type>Text</type>
</CustomField>