force-app/main/default/objects/GLBP1_Plan_de_pago__c/fields/GLBP1_Forma_de_pago__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Forma_de_pago__c</fullName>
    <label>Forma de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contado</fullName>
            </value>
            <value>
                <fullName>Crédito</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>