force-app/main/default/objects/GLBP1_Plan_de_pago__c/fields/GLBP1_IVA__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_IVA__c</fullName>
    <formula>GLBP1_Prima_neta__c * 0.19</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>