force-app/main/default/objects/GLBP1_Plan_de_pago__c/fields/GLBP1_Poliza_de_seguro__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Poliza_de_seguro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Póliza de seguro</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Planes de pago (Póliza de seguro)</relationshipLabel>
    <relationshipName>Planes_de_pago1</relationshipName>
    <type>Lookup</type>
</CustomField>