force-app/main/default/objects/GLBP1_Plan_de_pago__c/fields/GLBP1_Prima_neta__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Prima_neta__c</fullName>
    <label>Prima neta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>