force-app/main/default/objects/GLBP1_Plan_de_pago__c/fields/GLBP1_Total__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Total__c</fullName>
    <formula>GLBP1_Prima_neta__c + GLBP1_IVA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>